# mycelium

./: .gitignore  Cargo.toml  Dockerfile  README.md  mycelium.example.toml
.claude/: settings.json
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  shutdown.rs
src/agent/: claude.rs  engine.rs  mod.rs  prompt.rs
src/agent/tools/: ask_clarification.rs  create_file.rs  delete_file.rs  list_directory.rs  mod.rs  read_file.rs  search_code.rs  write_file.rs
src/platform/: mod.rs  types.rs
src/platform/github/: auth.rs  client.rs  mapper.rs  mod.rs
src/queue/: mod.rs  sequential.rs  startup.rs  task.rs
src/webhook/: events.rs  handler.rs  mod.rs  signature.rs
src/workflow/: issue.rs  mod.rs  review.rs  types.rs
src/workspace/: git.rs  manager.rs  mod.rs
