[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"
description = "Self-hostable service that resolves GitHub issues using Claude's agentic tool-use loop"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# GitHub API
octocrab = "0.41"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"

# Crypto (webhook verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JWT for GitHub App auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Base64
base64 = "0.22"
